Fix some texts and align attire.

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -94,7 +94,7 @@ article h4 {
 
 article h5 {
     font-size: 15px;
-    display: initial;
+    display: inline;
 }
 
 article li {
